Fixed animated text shifting buttons around so much.

--- a/src/sass/components/_text-box.scss
+++ b/src/sass/components/_text-box.scss
@@ -1,6 +1,7 @@
 .game__text-box {
   display: block;
   padding: 10rem .5rem;
+  min-height: 75vh;
   font-family: inherit;
   font-size: inherit;
   white-space: pre-wrap;
